# opensees_windows_compilation_files

./: .gitignore  CMakeLists.txt  README.md  WINDOWS11_BUILD_ANY_OPENSEES_SOURCE.md  WINDOWS11_BUILD_RUNBOOK.md  WINDOWS11_INSTALLER_EL_LADRUNO.md  WINDOWS11_QUICK_START.md  vcpkg.json
SCRIPTS/: 1_install_dependencies.ps1  2_fetch_source.ps1  3_build.ps1  4_package.ps1  build_windows11_full.ps1  create_el_ladruno_installer.ps1  fix_intel_mpi_windows11.ps1  init_oneapi_windows11.cmd
SRC/element/UWelements/: Tcl_generateInterfacePoints.cpp
SRC/modelbuilder/tcl/: myCommands.cpp
cmake/cmake/: OpenSeesDependencies.cmake  OpenSeesDependenciesWin.cmake
